[tool.poetry]
name = "homework-1"
version = "0.1.0"
description = ""
authors = ["Denys Kotsiuba  <denis.kotsiuba@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_1"}]

[tool.poetry.dependencies]
python = "^3.11"
inquirer = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
